--- a/src/libs/loguru/meson.build
+++ b/src/libs/loguru/meson.build
@@ -1,6 +1,3 @@
 libloguru = static_library('loguru',
-                           '../../../submodules/loguru/loguru.cpp',
-                           dependencies : [
-                             threads_dep,
-                             dl_dep,
-                           ])
+                           'loguru.cpp',
+                           dependencies : [ threads_dep, dl_dep ])
