--- a/tests/vs/tests.vcxproj.filters
+++ b/tests/vs/tests.vcxproj.filters
@@ -57,7 +57,7 @@
     <ClCompile Include="..\..\src\misc\cross.cpp">
       <Filter>dosbox_sources</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\submodules\loguru\loguru.cpp">
+    <ClCompile Include="..\..\src\libs\loguru\loguru.cpp">
       <Filter>dosbox_sources</Filter>
     </ClCompile>
     <ClCompile Include="..\support_tests.cpp">
