--- a/.github/workflows/platforms.yml
+++ b/.github/workflows/platforms.yml
@@ -8,11 +8,8 @@ jobs:
     name: Repository commit check
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository and submodules
+      - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
       - id: commit-check
         run: 'echo ::set-output name=has-commits::$(./scripts/has-commits-since.sh "24 hours ago")'
     outputs:
@@ -39,10 +36,8 @@ jobs:
             arch: ppc64le
             distro: ubuntu20.04
     steps:
-      - name: Checkout repository and submodules
+      - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          submodules: recursive
 
       - name: Build
         uses: uraimo/run-on-arch-action@master
