--- a/src/libs/whereami/meson.build
+++ b/src/libs/whereami/meson.build
@@ -1,1 +1,4 @@
 libwhereami = static_library('whereami', 'whereami.c')
+
+libwhereami_dep = declare_dependency(link_with : libwhereami,
+                                     include_directories : '.')
