--- a/src/libs/loguru/meson.build
+++ b/src/libs/loguru/meson.build
@@ -1,3 +1,6 @@
 libloguru = static_library('loguru',
                            'loguru.cpp',
                            dependencies : [ threads_dep, dl_dep ])
+
+libloguru_dep = declare_dependency(link_with : libloguru,
+                                   include_directories : '.')
