--- a/src/debug/meson.build
+++ b/src/debug/meson.build
@@ -7,7 +7,11 @@ libdebug_sources = files([
 
 libdebug = static_library('debug', libdebug_sources,
                           include_directories : incdir,
-                          dependencies: [sdl2_dep, curses_dep])
+                          dependencies: [
+                            sdl2_dep,
+                            curses_dep,
+                            libloguru_dep,
+                         ])
 
 libdebug_dep = declare_dependency(link_with : libdebug)
 
