Reformat default meson options for readability

--- a/meson.build
+++ b/meson.build
@@ -1,8 +1,13 @@
 project('dosbox-staging', 'c', 'cpp',
         version : '0.78.0',
         license : 'GPL-2.0-or-later',
-        default_options : ['cpp_std=c++17', 'warning_level=3', 'b_ndebug=if-release', 'b_staticpic=false'],
-        meson_version : '>= 0.54.2')
+        meson_version : '>= 0.54.2',
+        default_options : [
+	  'cpp_std=c++17',
+	  'warning_level=3',
+	  'b_ndebug=if-release',
+	  'b_staticpic=false',
+	])
 
 # After increasing the minimum-required meson version, make the following
 # improvements:
