--- a/vs/dosbox.vcxproj.filters
+++ b/vs/dosbox.vcxproj.filters
@@ -490,6 +490,9 @@
     <ClCompile Include="..\src\libs\loguru\loguru.cpp">
       <Filter>src\libs\loguru</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\libs\whereami\whereami.c">
+      <Filter>src\libs\whereami</Filter>
+    </ClCompile>
     <ClCompile Include="..\src\dos\program_biostest.cpp" />
     <ClCompile Include="..\src\dos\program_boot.cpp" />
     <ClCompile Include="..\src\dos\program_imgmount.cpp" />
@@ -937,6 +940,9 @@
     </ClInclude>
     <ClInclude Include="..\src\libs\loguru\loguru.hpp">
       <Filter>src\libs\loguru</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\libs\whereami\whereami.h">
+      <Filter>src\libs\whereami</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
