Add dos files tests + cleanup

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -46,13 +46,8 @@ fs_utils = executable('fs_utils', ['fs_utils_tests.cpp', 'stubs.cpp'],
 test('gtest fs_utils', fs_utils,
      workdir : project_source_root, is_parallel : false)
 
-drives = executable('drives', ['drives_tests.cpp'],
-                      dependencies : [gtest_dep, dosbox_dep],
-                      include_directories : incdir)
-test('gtest drives', drives, workdir : project_source_root, is_parallel : false)
-
 # other unit tests
-#
+
 unit_tests = [
   {'name' : 'iohandler_containers', 'deps' : [libmisc_dep]},
   {'name' : 'rwqueue',              'deps' : [libmisc_dep]},
@@ -60,11 +55,14 @@ unit_tests = [
   {'name' : 'string_utils',         'deps' : []},
   {'name' : 'setup',                'deps' : [stdcppfs_dep, libmisc_dep]},
   {'name' : 'support',              'deps' : [libmisc_dep]},
+  {'name' : 'drives',               'deps' : [dosbox_dep], 'extra_cpp': []},
+  {'name' : 'dos_files',            'deps' : [dosbox_dep], 'extra_cpp': []},
 ]
 
 foreach ut : unit_tests
   name = ut.get('name')
-  exe = executable(name, [name + '_tests.cpp', 'stubs.cpp'],
+  extra_cpp = ut.get('extra_cpp', ['stubs.cpp'])
+  exe = executable(name, [name + '_tests.cpp'] + extra_cpp,
                    dependencies : [gmock_dep, gtest_dep, libloguru_dep] + ut.get('deps'),
                    include_directories : incdir)
   test('gtest ' + name, exe)
