DOS_Shell tests and mocks, refactor fixture
This pulls DOSBox_Test_Fixture, a generic test harness for
running DOSBox out into a separate header file. Secondarily, this
commit adds tests for DOS_Shell and uses gmock, which has
required the execute_shell_cmd method to be made overridable
(virtual) and made a member of the DOS_Shell class.

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -57,6 +57,7 @@ unit_tests = [
   {'name' : 'support',              'deps' : [libmisc_dep]},
   {'name' : 'drives',               'deps' : [dosbox_dep], 'extra_cpp': []},
   {'name' : 'dos_files',            'deps' : [dosbox_dep], 'extra_cpp': []},
+  {'name' : 'shell_cmds',           'deps' : [dosbox_dep], 'extra_cpp': []},
 ]
 
 foreach ut : unit_tests
