--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -172,19 +172,8 @@ jobs:
           cp docs/README.video                    dest/doc/video.txt
           cp docs/vc_redist.txt                   dest/doc/vc_redist.txt
           cp README                               dest/doc/manual.txt
-          cp vs/$RELEASE_DIR/libfluidsynth-3.dll  dest/
-          cp vs/$RELEASE_DIR/glib-2.0-0.dll       dest/ # fluidsynth dependency
-          cp vs/$RELEASE_DIR/intl-8.dll           dest/ # glib dependency
-          cp vs/$RELEASE_DIR/pcre.dll             dest/ # glib dependency
-          cp vs/$RELEASE_DIR/iconv-2.dll          dest/ # glib dependency
-          cp vs/$RELEASE_DIR/mt32emu-2.dll        dest/
-          cp vs/$RELEASE_DIR/ogg.dll              dest/
-          cp vs/$RELEASE_DIR/opus.dll             dest/
-          cp vs/$RELEASE_DIR/SDL2.dll             dest/
-          cp vs/$RELEASE_DIR/SDL2_net.dll         dest/
-          cp vs/$RELEASE_DIR/libpng16.dll         dest/
-          cp src/libs/zmbv/$RELEASE_DIR/zlib1.dll dest/ # libpng dependency
-          cp src/libs/zmbv/$RELEASE_DIR/zmbv.dll  dest/
+          cp vs/$RELEASE_DIR/*.dll                dest/
+          cp src/libs/zmbv/$RELEASE_DIR/*.dll     dest/
 
           # Prepare translation files
           #
